--- a/public/css/Component/Admin/Admin_Center_Manager_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Manager_Add.css
@@ -3,15 +3,20 @@
         display: flex;
         align-items: center;
         justify-content: center;
-       
+
+    }
+
+    .main-right-top-one {
+        justify-content: end !important
     }
 
     .main-bottom-down-content {
         width: 60%;
-        height: 502px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 5px;
-        padding: 10px 30px;
+        height: 480px;
+        box-shadow: var(--box-shadow);
+        background-color: var(--background-color-main);
+        border-radius: 10px;
+        padding: 30px 30px;
         display: grid;
         grid-template-rows: 9% 91%;
     }
@@ -27,7 +32,7 @@
     }
 
     .main-bottom-down-content-top-content h3 {
-        font-size: 25px;
+        font-size: 18px;
         font-weight: 500;
     }
 
@@ -35,7 +40,7 @@
         height: 4px;
         width: 60px;
         background: var(--green-color-one);
-        margin-top: 3px;
+        margin-top: 4px;
     }
 
     .main-bottom-down-content-bottom {
@@ -60,7 +65,6 @@
         display: flex;
         align-items: center;
         padding: 15px;
-
     }
 
     .form-drag-area.active {
@@ -114,18 +118,18 @@
     .form-fields h2 {
         font-weight: 500;
         margin-bottom: 5px;
-        font-size: 17px;
+        font-size: 14px;
         margin-bottom: 7px;
     }
 
     .form-fields input {
-        height: 35px;
+        height: 33px;
         width: 85%;
         outline: none;
         border-radius: 5px;
         border: 1px solid #ccc;
         padding-left: 15px;
-        font-size: 16px;
+        font-size: 14px;
         border-bottom-width: 2px;
         transition: all 0.3s ease;
         margin-bottom: 5px;
@@ -143,7 +147,7 @@
 
     .form-fields .err {
         height: 10px;
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 500;
         margin-bottom: 5px;
         color: #e74c3c;
@@ -158,12 +162,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 5px;
+        margin-top: 10px;
     }
 
     .main-bottom-down-content-bottom-button button {
         height: 35px;
-        width: 25%;
+        width: 96%;
         outline: none;
         color: white;
         font-size: 18px;
@@ -251,7 +255,7 @@
         box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     }
 
-    .popup button:hover{
+    .popup button:hover {
         background: var(--button-hover-green);
     }
 
