--- a/public/css/Component/Admin/Admin_Center_Manager_View.css
+++ b/public/css/Component/Admin/Admin_Center_Manager_View.css
@@ -1,10 +1,55 @@
 .Admin_Center_Manger_View {
 
+    .main-right-bottom {
+
+        overflow: scroll !important;
+    }
+
+    .main-right-top-search {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 35%;
+        position: relative;
+        margin-left: 3.5%;
+    }
+
+    .main-right-top-search i {
+        position: absolute;
+        font-size: 25px;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .main-right-top-search input {
+        width: 100%;
+        height: 33px;
+        border-radius: 7px;
+        background-color: var(--background-color-two);
+        border: 1px solid #dcdde1;
+        font-size: 14px;
+        padding-left: 40px;
+        letter-spacing: 0.03rem;
+        color: var(--main-text-color);
+    }
+
+    .main-right-top-search input:focus {
+        border: 1px solid #1ca557;
+        outline: none;
+    }
+
+
+
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
         height: 450px;
         overflow: scroll;
+    }
+
+    .main-right-top-one {
+        justify-content: space-between;
     }
 
     .main-right-bottom-top {
@@ -17,20 +62,20 @@
     }
 
     .table-header {
-        grid-template-columns: 12% 9% 12% 17% 10% 15% 11% 7% 7%;
+        grid-template-columns: 17% 9% 15% 17% 15% 13% 7% 7%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns:  12% 9% 12% 17% 10% 15% 11% 7% 7%;
+        grid-template-columns: 17% 9% 15% 17% 15% 13% 7% 7%;
     }
 
     .table td {
         height: 55px;
     }
 
-    .manager_img{
+    .manager_img {
         width: 35px !important;
         height: 35px !important;
         border-radius: 50%;
@@ -47,101 +92,6 @@
         cursor: pointer;
     }
 
-   
-
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-
-        }
-
-        .table td {
-
-            font-size: 12px;
-
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-
-        }
 
 
-
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
-
-
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-
-
-        .table td {
-
-            font-size: 9px;
-
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
-        }
-
-        .main-right-bottom {
-            width: 140%;
-        }
-
-
-    }
 }
