--- a/public/css/Component/Admin/Admin_Discount_Agent_View.css
+++ b/public/css/Component/Admin/Admin_Discount_Agent_View.css
@@ -1,10 +1,24 @@
 .Admin_Discount_Agent_View {
+    .main-right-top-one {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between !important;
+        border: 10px;
+        width: 100%;
+        box-sizing: border-box;
+        height: 39%;
+        box-shadow: var(--box-shadow2);
+        background-color: var(--background-color-main);
+        z-index: 1;
+    }
 
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
         height: 450px;
         overflow: scroll;
+        overflow-x: scroll !important;
     }
 
     .main-right-bottom-top {
@@ -77,71 +91,37 @@
     }
 
     @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
-
-
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-
-
-        .table td {
-
-            font-size: 9px;
-
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
-        }
 
         .main-right-bottom {
-            width: 140%;
+            width: 160%;
+            overflow-x: scroll;
         }
 
+        .main-right-bottom-top {
+            width: 130%;
+        }
 
+        .main-right-bottom-down {
+            width: 130%;
+        }
+
+        .table-header {
+            grid-template-columns: 15% 15% 15% 15% 15%;
+        }
+
+        .table-row {
+            grid-template-columns: 15% 15% 15% 15% 15%;
+        }
+
+        .main-right-top-two h1 {
+            font-size: 15px !important;
+        }
+
+        .main-right-top-three p {
+            font-size: 13px !important;
+        }
     }
+
+
+
 }
