--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -1,162 +1,481 @@
-.Login-main {
 
-    .main {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        height: 731px;
-        font-family: 'Inter', sans-serif;
-        color: var(--main-text-color);
-    }
+*{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+  }
 
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    .main-left {
-        background-color: #8CF889;
-        font-size: 55px;
-        font-weight: 700;
-        width: 500px;
-        height: 100%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .main-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: auto;
-    }
-
-    .login-component {
-        width: 650px;
-        height: 650px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .login-image {
-        width: 660.94px;
-        height: 593.96px;
-        top: 223.84px;
-        display: block;
-        margin-top: 80px;
-        margin-left: -350px;
-    }
-
-    .image {
-        background-image: url('src/Logo.png');
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 170px;
-        height: 140px;
-        margin-bottom: 20px;
-    }
-
-    .login {
-        font-size: 35px;
-        letter-spacing: 0.03rem;
-        margin-bottom: 15px;
-        font-weight: bold;
-    }
-
-    .slogan {
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    .line {
-        width: 100px;
-        height: 5px;
-        margin-bottom: 50px;
-        background: var(--green-color-one);
-    }
-
-    .field {
-        margin-bottom: 5px;
-    }
-
-    .field-two {
-        width: 350px;
-        height: 15px;
-        font-size: 14px;
-        color: red;
-        margin-bottom: 15px;
-        align-items: flex-start;
-    }
-
-    .alert_empty {
-        border: 1.5px solid red;
-    }
-
-    input {
-        height: 35px;
-        width: 350px;
-        border: none;
-        border-radius: 5px;
-        font-size: 15px;
-        padding-left: 6px;
-        border: 1.5px solid #2d3436;
-        outline: none;
-    }
-
-    input:focus {
-        border: 1.5px solid #4dccaa;
-        outline: none;
-    }
-
-    .forgot {
-        margin-bottom: 40px;
-        text-decoration: none;
-        margin-right: 180px;
-        margin-top: -5px;
-        font-size: 16px;
-        color: black;
-    }
-
-    .login-button {
-        width: 180px;
-        height: 41px;
-        letter-spacing: 0.03rem;
-        border-radius: 7px;
-        font-size: 22px;
-        margin-bottom: 28px;
-        color: white;
-        font-weight: 600;
-        background: var(--green-color-one);
-        border: none;
-        cursor: pointer;
-    }
-
-    @media screen and (max-width: 1284px) {
-        .login-image {
-            display: none;
-        }
-    }
-
-    @media screen and (max-width: 648px) {
-        .login-image {
-            display: none;
-        }
-
-        .main-right {
-
-            width: 100%;
-
-        }
-
-    }
-
-    a {
-        text-decoration: none;
-        color: black;
-    }
-}
-
+  a{
+    color: #333;
+  }
+  
+  body,input{
+    font-family: 'Poppins' , sans-serif;
+  }
+  
+  .container{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    background-color: #fff;
+    overflow: hidden;
+  }
+  
+  .container:before{
+    content: '';
+    position: absolute;
+    width: 2000px;
+    height: 2000px;
+    border-radius: 60%;
+    background: linear-gradient(-45deg, #47b076, #90f4bd);
+    top: -10%;
+    right: 48%;
+    z-index: 6;
+    transform: translateY(-50%);
+    transition: 1.8s ease-in;
+    
+  }
+  
+  .forms-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  
+  .signin-signup{
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 5;
+    transition: 1s 0.7s ease-in-out;
+  
+  }
+  
+  form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 5rem;
+    overflow: hidden;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    transition: 0.2s 0.7s ease-in-out;
+  
+  }
+  
+  form.sign-in-form{
+    z-index: 2;
+  }
+  
+  .slogan {
+    font-size: 13px;
+    margin-bottom: 15px;
+  }
+  
+  .line {
+    width: 100px;
+    height: 5px;
+    margin-bottom: 30px;
+    background: #0c562d;
+  }
+  
+  .forgot {
+    margin-bottom: 30px;
+    text-decoration: none;
+    margin-right: 225px;
+    margin-top: 20px;
+    font-size: 13px;
+    color: black;
+  }
+  
+  
+  form.sign-up-form{
+    z-index: 1;
+    opacity: 0;
+  }
+  
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+  }
+  
+  .top img {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+  }
+  
+  .top h1{
+    margin-right: 30px;
+  }
+  
+  .porfile-cont {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 15px !important;
+    font-weight: 400;
+    
+  }
+  .porfile-cont p{
+    margin-right: 30px;
+  }
+  
+  input[type=file] {
+    width: 1px;
+    height: 1px;
+    opacity: 2;
+    flex: 3;
+    cursor: pointer !important;
+    display: none;
+  }
+  
+  .porfile-cont img {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 15px;
+    border-radius: 12px;
+    cursor: pointer;
+    margin-right: 30px;
+  }
+  
+  .title{
+    font-size: 2.2rem;
+    color: #444;
+    margin-bottom: 10px;
+  }
+  .input-fieldlog{
+    max-width: 380px;
+    width: 100%;
+    height: 40px;
+    background-color: #f5f6fa;
+    margin: 10px 0;
+    border-radius: 10px;
+    display:grid;
+    grid-template-columns: 5% 95%;
+    padding: 0 .9rem;
+    border: 1px solid #b8b7b7;
+     align-items: center;
+  
+  }
+  
+  .input-fieldlog i{
+    text-align: center;
+    line-height: 55px;
+    color:#acacac;
+    font-size: 1.1rem;
+  
+  }
+  
+  .input-fieldlog input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 200;
+    font-size: 1rem;
+    color: #333;
+  
+  }
+  .input-fieldlog input::placeholder{
+    color: #8d8d8d;
+    font-weight: 500;
+    padding-left: 20px;
+    align-self: center;
+  }
+  
+  .input-field{
+    width: 285px;
+    height: 40px;
+    background-color: #f5f6fa;
+    margin: 10px 0;
+    border-radius: 10px;
+    padding: 0 .4rem;
+    border: 1px solid #cdcdcd;
+  
+  }
+  
+  .input-field i{
+    text-align: center;
+    line-height: 55px;
+    color:#acacac;
+    font-size: 1.1rem;
+  
+  }
+  
+  .input-field input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 200;
+    font-size: 0.9rem;
+    color: #333;
+    padding-top: 7px;
+    padding-left: 10px;
+  }
+  .input-field input::placeholder{
+    color: #8d8d8d;
+    font-weight: 500;
+    padding-top: 7px;
+  }
+  
+  
+  .input-field2{
+    width: 285px;
+    height: 40px;
+    background-color: #f5f6fa;
+    margin: 10px 0;
+    border-radius: 10px;
+    padding: 0 .4rem;
+    border: 1px solid #cdcdcd;
+  
+  }
+  
+  .input-field2 i{
+    text-align: center;
+    line-height: 55px;
+    color:#acacac;
+    font-size: 1.1rem;
+  
+  }
+  
+  .input-field2 input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 200;
+    font-size: 0.9rem;
+    color: #333;
+    padding-top: 7px;
+    padding-left: 10px;
+  }
+  
+  .input-field2 input::placeholder{
+    color: #8d8d8d;
+    font-weight: 500;
+    padding-top: 7px;
+  }
+  
+  
+  
+  .input-field3{
+    
+    width: 600px;
+    height: 40px;
+    background-color: #f5f6fa;
+    margin: 10px 0;
+    border-radius: 10px;
+    padding: 0 .4rem;
+    border: 1px solid #cdcdcd;
+    
+  
+  }
+  
+  .input-field3 i{
+    text-align: center;
+    line-height: 55px;
+    color:#acacac;
+    font-size: 1.1rem;
+  
+  }
+  
+  .input-field3 input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 200;
+    font-size: 0.9rem;
+    color: #333;
+    padding-top: 7px;
+    padding-left: 10px;
+  }
+  
+  .input-field3 input::placeholder{
+    color: #8d8d8d;
+    font-weight: 500;
+    padding-top: 7px;
+  }
+  
+  .cont-main {
+   
+    margin-bottom: 3px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    
+  }
+  
+  .cont-main p {
+  
+    margin: 0;
+    font-size: 17px;
+    margin-bottom: 5px;
+  }
+  
+  .err {
+    color: var(--red-color);
+    font-size: 14px;
+    height: 14px;
+    letter-spacing: 0.03rem;
+  }
+  
+  .cont-region {
+    margin-bottom: 17px;
+  }
+  
+  .cont {
+    margin-bottom: 5px;
+  }
+  
+  .cont p {
+    margin: 0;
+    font-size: 17px;
+    margin-bottom: 5px;
+  }
+  
+  .cont-region p {
+    margin: 0;
+    font-size: 18px;
+    margin-bottom: 5px;
+    letter-spacing: 0.03rem;
+  }
+  
+  
+  .btn{
+    width:200px;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+    cursor: pointer;
+    background-color: #19954e;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    transition: .5s;
+  }
+  
+  .btn:hover{
+    background-color: #34cc78;
+  }
+  
+  .panels-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr)
+  }
+  
+  .panel{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+    z-index: 7;
+  }
+  
+  .left-panel{
+    pointer-events: all;
+    padding: 3rem 17% 2rem 12%;
+  }
+  
+  .right-panel{
+    pointer-events: none;
+    padding: 3rem 17% 2rem 17%;
+  }
+  
+  .panel .content{
+    color: rgb(9, 82, 15);
+    transition: .9s .6s ease-in-out;
+  }
+  
+  .panel h3{
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.15rem;
+  }
+  
+  .panel p{
+    font-size: 0.75rem;
+    padding: 0.7rem 0;
+  }
+  
+  .btn.transparent{
+    margin: 0;
+    background:none;
+    border: 2px solid #fff;
+    width: 130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+  
+  
+  }
+  
+  .image{
+    width: 100%;
+    
+    transition: 1.1s .4s ease-in-out;
+  }
+  .right-panel .content, .right-panel .image{
+    transform: translateX(800px);
+  }
+  
+  /*animation*/
+  .container.sign-up-mode:before{
+    transform: translate(100%, -50%);
+    right: 52%;
+  }
+  
+  .container.sign-up-mode .left-panel .image,
+  .container.sign-up-mode .left-panel .content{
+    transform: translate(-800px);
+  }
+  
+  .container.sign-up-mode .right-panel .content,
+  .container.sign-up-mode .right-panel .image{
+    transform: translateX(0px);
+  }
+  
+  .container.sign-up-mode .left-panel{
+    pointer-events: none;
+  }
+  
+  .container.sign-up-mode .right-panel{
+    pointer-events: all;
+  }
+  
+  .container.sign-up-mode .signin-signup{
+    left:25%
+  }
+  
+  .container.sign-up-mode form.sign-in-form{
+    z-index: 1;
+    opacity: 0;
+  }
+  
+  .container.sign-up-mode form.sign-up-form{
+    z-index: 2;
+    opacity: 1;
+  }
