--- a/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
+++ b/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
@@ -362,63 +362,7 @@
     background: #19954e;
   }
 
-  @media screen and (max-width: 1178px) {
-    .image2 {
-      display: none;
-    }
-
-    .main-bottom-content h4 {
-      font-size: 15px !important;
-    }
-
-    .main-bottom-content h6 {
-      font-size: 13px !important;
-    }
-  }
-
-  @media screen and (max-width: 914px) {
-    .main-bottom-bottom {
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
-
-  @media screen and (max-width: 1118px) {
-    .main-right-top-one-content {
-      width: 250px;
-      margin-left: 1%;
-
-    }
-
-  }
-
-  @media screen and (max-width:862px) {
-    .main-right-top-one-content {
-      width: 250px;
-      margin-left: 0;
-      padding-left: 5%;
-    }
-
-    .main-right-top-one input {
-      width: 20%;
-
-    }
-
-    .main-right-top-three-content p {
-      font-size: 14px;
-
-    }
-
-
-    .line {
-      width: 86px;
-      height: 2px;
-
-    }
-
-
-  }
+ 
 
   /*Garbage release popup*/
   .garbage-release-popup-box {
@@ -621,202 +565,6 @@
 
   }
 
-  /*Garbage release popup*/
-  /* .garbage-release-popup-box {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-    
-    
-    
-    .garbage-release-popup-box {
-        .garbage-release-popup-form {
-          width: 45%;
-          background: white;
-          border-radius: 6px;
-          position: relative;
-          text-align: center;
-          padding: 40px;
-          color: #333;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          transition: transform 0.4s, top 0.4s;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-    
-        .form-title {
-          font-size: 25px;
-          font-weight: 500;
-          position: relative;
-          margin-bottom: 20px;
-        }
-    
-        .form-title::before {
-          content: '';
-          position: absolute;
-          height: 4px;
-          width: 60px;
-          background: var(--green-color-one);
-          margin-top: 33px;
-          margin-bottom: 5px;
-        }
-    
-        .form-container {
-          width: 100%;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
-        }
-    
-        .user-details {
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
-          flex-wrap: wrap;
-    
-        }
-    
-        .main-right-bottom-content-content {
-          width: 300px;
-          position: relative;
-        }
-    
-        .details {
-          display: block;
-          font-weight: 500;
-          margin-bottom: 5px;
-          text-align: left;
-    
-        }
-    
-        .input-container {
-          position: relative;
-          margin-bottom: 20px;
-        }
-    
-        .wide-note {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          margin-bottom: 10px;
-        }
-    
-        .wide-note .main-right-bottom-content-content {
-          width: calc(100% - 4px);
-        }
-    
-        .note-input {
-          width: 100%;
-          height: 200px;
-          padding-left: 20px;
-          padding-right: 2px;
-        }
-    
-        .icon {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          left: 10px;
-          color: #555;
-        }
-    
-        .error-div {
-          color: red;
-          font-size: 0.8em;
-          margin-top: 4px;
-          margin-bottom: 4px;
-          text-align: left;
-          position: absolute;
-          bottom: -20px;
-          left: 0;
-        }
-    
-        .main-right-bottom-content-content input {
-          height: 45px;
-          width: 90%;
-          outline: none;
-          border-radius: 5px;
-          border: 1px solid #ccc;
-          padding-left: 35px;
-          font-size: 16px;
-          transition: all 0.3s ease;
-        }
-    
-        .main-right-bottom-content-content input:focus {
-          border-color: #4dccaa;
-        }
-    
-        .wide-note input {
-          width: 96%;
-        }
-    
-        .form-button {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 50px;
-        }
-    
-        .a {
-          height: auto !important;
-        }
-    
-        .form-button button[type="submit"] {
-          height: 50px;
-          outline: none;
-          width: 260px;
-          color: white;
-          font-size: 18px;
-          font-weight: 500;
-          border-radius: 5px;
-          cursor: pointer;
-          border: none;
-          letter-spacing: 1px;
-          background: var(--green-color-one);
-          padding: 0 20px;
-        }
-    
-        .form-button button[type="submit"]:hover {
-          background: #19954e;
-        }
-    
-        .cancel-button {
-          width: 230px;
-          height: 50px;
-          outline: none;
-          color: #333;
-          font-size: 18px;
-          font-weight: 500;
-          border-radius: 5px;
-          cursor: pointer;
-          border: none;
-          letter-spacing: 1px;
-          background: #ccc;
-          padding: 0 15px;
-          margin-left: 45px;
-    
-        }
-    
-        .cancel-button:hover {
-          background: #ddd;
-        }
-    
-      } */
-
 
   /*Success popup*/
   .request_success {
@@ -982,6 +730,344 @@
 
     background-color: #979494;
   }
+
+   /* @media screen and (max-width: 1178px) {
+    .image2 {
+      display: none;
+    }
+
+    .main-bottom-content h4 {
+      font-size: 15px !important;
+    }
+
+    .main-bottom-content h6 {
+      font-size: 13px !important;
+    }
+  }
+
+  @media screen and (max-width: 914px) {
+    .main-bottom-bottom {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+
+  @media screen and (max-width: 1118px) {
+    .main-right-top-one-content {
+      width: 250px;
+      margin-left: 1%;
+
+    }
+
+  }
+
+  @media screen and (max-width:862px) {
+    .main-right-top-one-content {
+      width: 250px;
+      margin-left: 0;
+      padding-left: 5%;
+    }
+
+    .main-right-top-one input {
+      width: 20%;
+
+    }
+
+    .main-right-top-three-content p {
+      font-size: 14px;
+
+    }
+
+
+    .line {
+      width: 86px;
+      height: 2px;
+
+    }
+
+
+  } */
+
+  @media screen and (max-width: 1118px) {
+    .table td {
+        font-size: 12px;
+    }
+
+    .table-header {
+        font-size: 14px;
+    }
+
+    .table-row img {
+        width: 20px;
+        height: 20px;
+    }
+
+    .main-right-top-search {
+        margin-left: 40px;
+    }
+
+
+    .main-right-top-profile img{
+        width: 40px;
+        height: 40px;
+        margin-top: 3px;
+    }
+
+    .main-right{
+        overflow-x: hidden;
+    }
+}
+
+@media screen and (max-width: 1108px) {
+    .notification_popup h1 {
+        font-size: 19px;
+        letter-spacing: 0.001rem;
+        margin-top: 5px;
+        margin-left: 8px;
+    }
+
+    .notification_popup {
+        width: 26%;
+    }
+}
+
+@media screen and (max-width: 996px) {
+    /* .main-right-bottom {
+        width: 140%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-top {
+        width: 140%;
+    }
+
+    .main-right-bottom-down {
+        width: 140%;
+    } */
+
+    .notification_popup {
+        width: 28%;
+    }
+
+    .main-right-top-profile-cont p{
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:862px) {
+
+    .main-right-top-three-content p {
+        font-size: 14px;
+    }
+
+    .line {
+        width: 86px;
+        height: 2px;
+    }
+
+    .notification_popup {
+        top: 11%;
+        right: 10%;
+        width: 35%;
+    }
+
+    .box-content{
+      width: 120px;
+      height: 120px;
+    }
+
+    .box-content p{
+      font-size: 14px;
+
+    }
+
+    .box-content span{
+      font-size: 16px;
+    }
+
+
+
+}
+
+@media screen and (max-width:660px) {
+    .notification_popup {
+        width: 35%;
+        right: 10%;
+    }
+
+    .main-right-top-four-component p{
+        display: none;
+
+    }
+
+    .main-right-top-four-component{
+        width: auto;
+    }
+
+    .main-right-bottom-top-box {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* 2 columns */
+      grid-template-rows: repeat(3, 1fr); /* 3 rows */
+      gap: 2.5rem;
+      /* border: 1px solid red; */
+      margin-top: 40px;
+    }
+
+    .release-button{
+      margin-top: 60px;
+    }
+
+  
+}
+
+@media screen and (max-width:540px) {
+    /* .main-right-bottom {
+        width: 160%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-top {
+        width: 160%;
+    }
+
+    .main-right-bottom-down {
+        width: 160%;
+    } */
+
+    .notification_popup {
+        width: 46%;
+        left: 15%;
+    }
+
+    .main-right-top-four-left{
+        margin-left: 35px;
+        padding-left: 0;
+    }
+
+    .main-right-top-four-left button{
+        width: 60px;
+    }
+
+    .main-right-top-four-left p{
+        display: none;
+    }
+
+    .main-right-top-four-right{
+        margin-right: 40%;
+    }
+
+    .main-right-top-profile-cont h3{
+        font-size: 16px;
+    }
+
+    .line{
+        margin-left: -10px !important;
+    }
+
+   
+
+  
+}
+
+@media screen and (max-width: 475px) {
+    .main-right-top-profile-cont h3{
+        display: none;
+    }
+
+    .main-right-top-profile-cont p{
+        display: none;
+    }
+
+    .main-right-top-profile img{
+        margin-right: 5px;
+    }
+
+    .main-right-top-three-content{
+        margin-right: 0;
+
+    }
+
+    .main-right-top-three-content p{
+        font-size: 12px;
+    }
+
+}
+
+@media screen and (max-width: 844px) {
+    .main-right-top-notification {
+        margin-left: 5%;
+    }
+    .main-right-top-search {
+        margin-left: 1px;
+    }
+
+    .main-right-bottom-container {
+        width: 140%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-container-top {
+        width: 140%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-container-container {
+        width: 140%;
+        overflow-x: scroll;
+    }
+
+}
+
+@media screen and (max-width:700px) {
+
+    .main-right-top-search {
+        width: 35%;
+    }
+
+    .main-right-top-search i {
+        left: 10px;
+        margin-left: 10px;
+    }
+
+    .main-right-top-search input {
+        height: 28px;
+        margin-left: 10px;
+    }
+
+    .main-right-top-three{
+        margin-bottom: 2%;
+    }
+
+    .line{
+        margin-left: -20px;
+    }
+
+    .box-content{
+      width: 100px;
+      height: 100px;
+    }
+
+    .box-content p{
+      font-size: 12px;
+
+    }
+
+    .box-content span{
+      font-size: 14px;
+    }
+
+    .box-content i{
+      font-size: 25px;
+    }
+
+    .release-button{
+      width: 180px;
+      padding: 8px;
+      font-size: 16px;
+    }
+}
+
 
 
 }
